=== 08/04/2017
--
- correction bug dans la selection du type de calcul
--
=== 11/12/2016
--
- regroupement des onglets Filtration et Temps de filtration
--
=== 26/11/2016
--
- ajout de boutons Saison / Hivernage optionnels sur le widget.
- traitement optionnel pendant l'hivernage.
- refonte de la présentation de la configuration.
--
=== 25/04/2016
--
- ajout d'un onglet asservissement externe, diverses améliorations.
--
=== 11/09/2015
--
- refonte de la partie calcul de temps de filtration.
--
=== 01/08/2015
--
- première version du plugin.
--