@@ -668,6 +668,7 @@ class pool extends eqLogic
             $this->getCmd(null, 'temperatureMaxi')->event(0); // reset temperature maxi
         }
 
+        log::add('pool', 'info', $this->getHumanName() . '$temperatureCalcul=' . $temperatureCalcul);
         log::add('pool', 'info', $this->getHumanName() . '$filtrationTime=' . $filtrationTime);
 
         log::add('pool', 'info', $this->getHumanName() . '$filtrationDebut=' . date("H:i d-m-Y", $filtrationDebut));
@@ -724,11 +725,78 @@ class pool extends eqLogic
 
         } else {
 
+            if ($this->getConfiguration('pausePivot', '0') != 0) { // Pause de filtration active
+
+                // Premier segment
+                if ($timeNow >= $filtrationDebut && $timeNow <= $filtrationPauseDebut) {
+
+                    if ($timeNow >= $filtrationDebut + (60 * 5)) {
+                        $this->getCmd(null, 'temperature_display')->event($temperature_water);
+                        // log::add('pool', 'debug', $this->getHumanName() . 'temperature_display=' . $temperature_water);
+                    }
+
+                    // Active la filtration
+                    $filtrationTemperature = 1;
+                }
+
+                // Deuxieme segment
+                if ($timeNow >= $filtrationPauseFin && $timeNow <= $filtrationFin) {
+
+                    if ($timeNow >= $filtrationPauseFin + (60 * 5)) {
+                        $this->getCmd(null, 'temperature_display')->event($temperature_water);
+                        // log::add('pool', 'debug', $this->getHumanName() . 'temperature_display=' . $temperature_water);
+                    }
+
+                    // Active la filtration
+                    $filtrationTemperature = 1;
+                }
+            }
+            else { // Pas de pause de filtration
+
+                if ($timeNow >= $filtrationDebut && $timeNow <= $filtrationFin) {
+
+                    if ($timeNow >= $filtrationDebut + (60 * 5)) {
+                        $this->getCmd(null, 'temperature_display')->event($temperature_water);
+                        // log::add('pool', 'debug', $this->getHumanName() . 'temperature_display=' . $temperature_water);
+                    }
+                    // Active la filtration
+                    $filtrationTemperature = 1;
+                }
+            }
+
+            if ($filtrationTemperature == 1) {
+
+                // Si Asservissement interne et marche forcee active on repasse en manuel
+                if ($this->getConfiguration('cfgAsservissementExterne', 'enabled') == 'disabled') {
+                    if ($this->getConfiguration('disable_marcheForcee', '0') == '1') {
+                        if ($this->getCmd(null, 'marcheForcee')->execCmd() == 1) {
+                            // log::add('pool', 'debug', $this->getHumanName() . 'disable_marcheForcee');
+                            $this->getCmd(null, 'marcheForcee')->event(0);
+                        }
+                    }
+                }
+
+                if ($this->getCmd(null, 'calculateStatus')->execCmd() != 0) {
+                    $this->getCmd(null, 'calculateStatus')->event(0); // 0 >> debut plage de filtration, reset du flag calcul
+                }
+
+                // Determine la temperature maxi pour le prochain calcul
+                $temperatureMaxi = $this->getCmd(null, 'temperatureMaxi')->execCmd();
+
+                // log::add('pool', 'debug', $this->getHumanName() . '$temperatureMaxi=' . $temperatureMaxi);
+                // log::add('pool', 'debug', $this->getHumanName() . '$temperature_water=' . $temperature_water);
+
+                if ($temperature_water > $temperatureMaxi) {
+                    $this->getCmd(null, 'temperatureMaxi')->event($temperature_water);
+                }
+            }
+
+/*
             if ($timeNow > $filtrationDebut && $timeNow < $filtrationFin) {
 
                 // On est dans la plage de filtration
 
-                // Si Asservissment interne et marche forcee active on repasse en manuel
+                // Si Asservissement interne et marche forcee active on repasse en manuel
                 if ($this->getConfiguration('cfgAsservissementExterne', 'enabled') == 'disabled') {
                     if ($this->getConfiguration('disable_marcheForcee', '0') == '1') {
                         if ($this->getCmd(null, 'marcheForcee')->execCmd() == 1) {
@@ -753,17 +821,22 @@ class pool extends eqLogic
                     }
                 }
 
-                // Determine la temperature maxi pour le prochain calcul
-                $temperatureMaxi = $this->getCmd(null, 'temperatureMaxi')->execCmd();
+                if ($filtrationTemperature == 1) {
 
-                // log::add('pool', 'debug', $this->getHumanName() . '$temperatureMaxi=' . $temperatureMaxi);
-                // log::add('pool', 'debug', $this->getHumanName() . '$temperature_water=' . $temperature_water);
+                    $this->getCmd(null, 'temperature_display')->event($temperature_water);
 
-                if ($temperature_water > $temperatureMaxi) {
-                    $this->getCmd(null, 'temperatureMaxi')->event($temperature_water);
+                    // Determine la temperature maxi pour le prochain calcul
+                    $temperatureMaxi = $this->getCmd(null, 'temperatureMaxi')->execCmd();
+
+                    // log::add('pool', 'debug', $this->getHumanName() . '$temperatureMaxi=' . $temperatureMaxi);
+                    // log::add('pool', 'debug', $this->getHumanName() . '$temperature_water=' . $temperature_water);
+
+                    if ($temperature_water > $temperatureMaxi) {
+                        $this->getCmd(null, 'temperatureMaxi')->event($temperature_water);
+                    }
                 }
-
             }
+*/
 
             $calculateStatus = $this->getCmd(null, 'calculateStatus')->execCmd();
             // log::add('pool', 'debug', $this->getHumanName() . '$calculateStatus=' . $calculateStatus);
@@ -771,6 +844,7 @@ class pool extends eqLogic
             if ($timeNow > $filtrationFin && $calculateStatus == 0) {
                 // On est apres la plage de filtration, relancer le calcul pour la plage de demain
                 $this->calculateTimeFiltration($temperature_water, true);
+                $this->getCmd(null, 'temperature_display')->event($temperature_water);
             }
 
         }
@@ -908,6 +982,7 @@ class pool extends eqLogic
             $this->getCmd(null, 'temperatureMaxi')->event(0); // reset temperature maxi
         }
 
+        log::add('pool', 'info', $this->getHumanName() . '$temperatureCalcul=' . $temperatureCalcul);
         log::add('pool', 'info', $this->getHumanName() . '$filtrationTime=' . $filtrationTime);
 
         log::add('pool', 'info', $this->getHumanName() . '$filtrationDebut=' . date("H:i d-m-Y", $filtrationDebut));
@@ -952,6 +1027,43 @@ class pool extends eqLogic
 
             if ($timeNow > $filtrationDebut && $timeNow < $filtrationFin) {
 
+                if ($timeNow >= $filtrationDebut + (60 * 5)) {
+                    $this->getCmd(null, 'temperature_display')->event($temperature_water);
+                    // log::add('pool', 'debug', $this->getHumanName() . 'temperature_display=' . $temperature_water);
+                }
+                // Active la filtration
+                $filtrationHivernage = 1;
+            }
+
+            if ($filtrationHivernage == 1) {
+
+                // Si Asservissment interne et marche forcee active on repasse en manuel
+                if ($this->getConfiguration('cfgAsservissementExterne', 'enabled') == 'disabled') {
+                    if ($this->getConfiguration('disable_marcheForcee', '0') == '1') {
+                        if ($this->getCmd(null, 'marcheForcee')->execCmd() == 1) {
+                            // log::add('pool', 'debug', $this->getHumanName() . 'disable_marcheForcee');
+                            $this->getCmd(null, 'marcheForcee')->event(0);
+                        }
+                    }
+                }
+
+                if ($this->getCmd(null, 'calculateStatus')->execCmd() != 0) {
+                    $this->getCmd(null, 'calculateStatus')->event(0); // 0 >> debut plage de filtration, reset du flag calcul
+                }
+
+                // Determine la temperature maxi pour le prochain calcul
+                $temperatureMaxi = $this->getCmd(null, 'temperatureMaxi')->execCmd();
+
+                // log::add('pool', 'debug', $this->getHumanName() . '$temperatureMaxi=' . $temperatureMaxi);
+                // log::add('pool', 'debug', $this->getHumanName() . '$temperature_water=' . $temperature_water);
+
+                if ($temperature_water > $temperatureMaxi) {
+                    $this->getCmd(null, 'temperatureMaxi')->event($temperature_water);
+                }
+            }
+/*
+            if ($timeNow > $filtrationDebut && $timeNow < $filtrationFin) {
+
                 // On est dans la plage de filtration
 
                 // Si Asservissment interne et marche forcee active on repasse en manuel
@@ -971,24 +1083,29 @@ class pool extends eqLogic
                 // Active la filtration
                 $filtrationHivernage = 1;
 
-                // Determine la temperature maxi pour le prochain calcul
-                $temperatureMaxi = $this->getCmd(null, 'temperatureMaxi')->execCmd();
+                if ($filtrationHivernage == 1) {
 
-                // log::add('pool', 'debug', $this->getHumanName() . '$temperatureMaxi=' . $temperatureMaxi);
-                // log::add('pool', 'debug', $this->getHumanName() . '$temperature_water=' . $temperature_water);
+                    $this->getCmd(null, 'temperature_display')->event($temperature_water);
 
-                if ($temperature_water > $temperatureMaxi) {
-                    $this->getCmd(null, 'temperatureMaxi')->event($temperature_water);
+                    // Determine la temperature maxi pour le prochain calcul
+                    $temperatureMaxi = $this->getCmd(null, 'temperatureMaxi')->execCmd();
+
+                    // log::add('pool', 'debug', $this->getHumanName() . '$temperatureMaxi=' . $temperatureMaxi);
+                    // log::add('pool', 'debug', $this->getHumanName() . '$temperature_water=' . $temperature_water);
+
+                    if ($temperature_water > $temperatureMaxi) {
+                        $this->getCmd(null, 'temperatureMaxi')->event($temperature_water);
+                    }
                 }
-
             }
-
+*/
             $calculateStatus = $this->getCmd(null, 'calculateStatus')->execCmd();
             // log::add('pool', 'debug', $this->getHumanName() . '$calculateStatus=' . $calculateStatus);
 
             if ($timeNow > $filtrationFin && $calculateStatus == 0) {
                 // On est apres la plage de filtration, relancer le calcul pour la plage de demain
                 $this->calculateTimeFiltrationHivernage($temperature_water, $lever_soleil, true);
+                $this->getCmd(null, 'temperature_display')->event($temperature_water);
             }
 
         }
@@ -2052,6 +2169,10 @@ class pool extends eqLogic
             $this->setConfiguration('cfgAsservissementExterne', 'disabled');
         }
 
+        if ($this->getConfiguration('sondeLocalTechnique') == '') {
+            $this->setConfiguration('sondeLocalTechnique', '0');
+        }
+
         // log::add('pool', 'debug', $this->getHumanName() . 'preSave() end');
     }
 
@@ -2080,7 +2201,11 @@ class pool extends eqLogic
                 $temperature->setLogicalId('temperature');
                 $temperature->setOrder($order++);
                 $temperature->setUnite('°C');
-                $temperature->setIsVisible(1);
+                if ($this->getConfiguration('sondeLocalTechnique', '0') == '0') {
+                    $temperature->setIsVisible(1);
+                } else {
+                    $temperature->setIsVisible(0);
+                }
                 $temperature->setIsHistorized(1);
 
                 $value = '';
@@ -2097,6 +2222,33 @@ class pool extends eqLogic
                 $temperature->setValue($value);
                 $temperature->save();
                 $temperature->event($temperature->execute());
+            }
+
+            ///////////////////////////////////////////////////////////////////////////////////////
+
+            // temperature_display
+            {
+                $temperature_display = $this->getCmd(null, 'temperature_display');
+                if (!is_object($temperature_display)) {
+                    $temperature_display = new poolCmd();
+                    $temperature_display->setTemplate('dashboard', 'tile');
+                    $temperature_display->setTemplate('mobile', 'badge');
+                    // $temperature_display->setDisplay('parameters', array('displayHistory' => 'display : none;'));
+                }
+                $temperature_display->setEqLogic_id($this->getId());
+                $temperature_display->setName(__('Température eau', __FILE__));
+                $temperature_display->setType('info');
+                $temperature_display->setSubType('numeric');
+                $temperature_display->setLogicalId('temperature_display');
+                $temperature_display->setOrder($order++);
+                $temperature_display->setUnite('°C');
+                if ($this->getConfiguration('sondeLocalTechnique', '0') == '1') {
+                    $temperature_display->setIsVisible(1);
+                } else {
+                    $temperature_display->setIsVisible(0);
+                }
+                $temperature_display->setIsHistorized(1);
+                $temperature_display->save();
             }
 
             ///////////////////////////////////////////////////////////////////////////////////////
@@ -3109,6 +3261,10 @@ class poolCmd extends cmd
             }
             if ($date != '') {
                 $this->setCollectDate($date);
+            }
+
+            if ($eqLogic->getConfiguration('sondeLocalTechnique', '0') == '0') {
+                $eqLogic->getCmd(null, 'temperature_display')->event(round(jeedom::evaluateExpression($eqLogic->getConfiguration('temperature_water')), 1));
             }
 
             // log::add('pool', 'debug', $this->getHumanName() . ' execute() temperature_water:' . round(jeedom::evaluateExpression($eqLogic->getConfiguration('temperature_water')), 1));
